--- a/fe/styles/globals.scss
+++ b/fe/styles/globals.scss
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'components.scss';
 
 html,
 body {
@@ -17,4 +18,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.canvas{
+  border: 2px solid;
+  @apply border-indigo-600;
+  position: absolute;
+  border-radius: 10px;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
